@@ -56,6 +56,7 @@ setup(
         'Programming Language :: Python',
         'Programming Language :: Python :: 2.6',
         'Programming Language :: Python :: 2.7',
+        'Programming Language :: Python :: 3',
         "Topic :: Utilities",
         "Topic :: System :: Shells",
     ],
